Change trip info

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,23 @@
 
     <h1>Your trip.</h1>
     <hr />
+    <div class="alert alert-success" role="alert">
+      <h4 class="alert-heading">รายละเอียดแจ้ง</h4>
+      <p></p>
+      <pre class="mb-0">
+        บ้านริมทราย จ.ระยอง (ของจริงดีกว่าในรูป)
+
+        สิ่งที่ได้ : 
+        - รถโดยสาร(ไป-กลับ)
+        - ที่พัก 2 คืน
+        - อาหาร 5 มื้อ (มื้อเย็นวันที่ 8 เช้าวันที่ 10)
+        - หมู/ไก่(สำหรับบาร์บีคิว)
+        - เครื่องดื่มแอลกอฮอล์
+
+        อาหารทะเลอาจจะมีคนไปซื้อตอนกลางวัน คนที่ต้องการต้องจ่ายเงินกันเอง
+        http://www.baanrimsai.com/
+      </pre>
+    </div>
     <div class="row">
       <div class="col-3 text-right">
         <strong>ผู้เข้าร่วม</strong>
@@ -65,7 +82,7 @@
       <div class="col-3 text-right">
         <strong>At</strong>
       </div>
-      <div class="col">Chanthaburi</div>
+      <div class="col">Rayong</div>
     </div>
     <div class="row">
       <div class="col-3 text-right">
