Add more description

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,12 @@
         - หมู/ไก่(สำหรับบาร์บีคิว)
         - เครื่องดื่มแอลกอฮอล์
 
+        ไม่นำสัตว์เลี้ยงและอุปกรณ์ทำอาหารไปนะครับ
+        ถ้ารีสอร์ตพบเห็นคนนำมาต้องรับผิดชอบค่าปรับเองตามนี้
+        
+        **นำสัตว์เลี้ยงเข้าปรับตัวละ 1000 บาท**
+        **นำอุปกรณ์ครัวทุกชนิดปรับชิ้นละ 500 บาท**
+
         อาหารทะเลอาจจะมีคนไปซื้อตอนกลางวัน คนที่ต้องการต้องจ่ายเงินกันเอง
         http://www.baanrimsai.com/
       </pre>
