Add paid btn for admin

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
     <div id="peopleTable" style="display: none;" class="table-responsive pt-3">
       <table class="table table-hover">
         <thead class="thead-default">
-          <tr>
+          <tr id="people_head">
             <th>StudentID</th>
             <th>Name</th>
             <th>ชำระเงินแล้ว</th>
