--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,7 @@
             <th>StudentID</th>
             <th>Name</th>
             <th>ชำระเงินแล้ว</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody id="people_data">
